--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Diagnal Test App</string>
     <string name="action_settings">Settings</string>
+    <string name="movie_poster">movie poster</string>
 </resources>
