--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Diagnal Test App</string>
     <string name="action_settings">Settings</string>
     <string name="movie_poster">movie poster</string>
+    <string name="search_title">search</string>
 </resources>
