--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="movie_poster">movie poster</string>
     <string name="search_title">search</string>
+    <string name="search_view_icon">search view icon</string>
 </resources>
