Added toolbar back button listener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="movie_poster">movie poster</string>
     <string name="search_title">search</string>
     <string name="search_view_icon">search view icon</string>
+    <string name="romcom">Romantic Comedy</string>
 </resources>
